# esp-idf

examples/get-started/hello_world/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/get-started/hello_world/main/: CMakeLists.txt  hello_world_main.c  matter_main.cpp  matter_main.h
examples/system/ota/simple_ota_example/: sdkconfig.defaults
examples/system/ota/simple_ota_example/main/: simple_ota_example.c
examples/system/ota/simple_ota_example/server_certs/: ca_cert.pem
